# 4D-Association

./: .gitignore  README.md  main.py  requirements.txt
4da-linux-c++-cmake/: CMakeLists.txt
4da-linux-c++-cmake/cli_demo/: CMakeLists.txt
4da-linux-c++-cmake/four_d_association/: CMakeLists.txt  evaluate_shelf_main.cpp  main.cpp
association/: camera.py  graph_associate.py  graph_construct.py  openpose_detection.py  triangulate_mpersons_map.py
configs/: config.yaml
openpose/: demo_video.py  model.py  openpose4da.py  torch_openpose.py  util.py
tools/: camera_params.py  get_image_list.py  get_openpose_detection.py  send2redis.py
utils/: FPS.py
visualize/: vis_3d_person.py  vis_cam_param_coord.py  vis_openpose_detection.py
